tests/baselines/reference/ambientExternalModuleWithRelativeModuleName.errors.txt
tests/cases/compiler/ambientExternalModuleWithRelativeModuleName.ts(1,16): error TS2436: Ambient module declaration cannot specify relative module name.
tests/cases/compiler/ambientExternalModuleWithRelativeModuleName.ts(5,16): error TS2436: Ambient module declaration cannot specify relative module name.


==== tests/cases/compiler/ambientExternalModuleWithRelativeModuleName.ts (2 errors) ====
    declare module "./relativeModule" {
                   ~~~~~~~~~~~~~~~~~~
!!! error TS2436: Ambient module declaration cannot specify relative module name.
        var x: string;
    }
    
    declare module ".\\relativeModule" {
                   ~~~~~~~~~~~~~~~~~~~
!!! error TS2436: Ambient module declaration cannot specify relative module name.
        var x: string;
    }